objects/Test_Report__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>auto fills with user from related Issue Tracker To Borrego Approver, used in conjunction with Approval Process and LH</description>
        <inlineHelpText>auto fills with user from related Issue Tracker To Borrego Approver, used in conjunction with Approval Process and LH</inlineHelpText>
        <label>Assigned to:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Enter the date the Test Report request was received from the field.</inlineHelpText>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drawing_Refererence__c</fullName>
        <label>Drawing Refererence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Tracker__c</fullName>
        <inlineHelpText>Issue Tracker number associated this Test Report</inlineHelpText>
        <label>Issue Tracker</label>
        <referenceTo>Request_for_Information_RFI__c</referenceTo>
        <relationshipLabel>Test Reports</relationshipLabel>
        <relationshipName>Test_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes_and_Additional_Information__c</fullName>
        <inlineHelpText>Use this section to add detailed notes regarding the Test Report</inlineHelpText>
        <label>Notes and Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Issue_Tracker__r.ASProject__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project related to the submittal.</inlineHelpText>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>updated by trigger to match project on related Issue tracker, hidden field no need to be on layout.</description>
        <inlineHelpText>updated by trigger to match project on related Issue tracker, hidden field no need to be on layout.</inlineHelpText>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Test Reports</relationshipLabel>
        <relationshipName>Test_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_response_Date__c</fullName>
        <inlineHelpText>The target date that you are asking the approver to respond by</inlineHelpText>
        <label>Requested response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <inlineHelpText>The response details to the Test Report submitted from the approver. Must be filled out before the Test Report can be complete</inlineHelpText>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Users__c</fullName>
        <label>Selected Users</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Highlight__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&quot;Approval Pending&quot;),IMAGE( &quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=015800000014viY&quot;, &quot;Submitted Pending1&quot;), 
IF(ISPICKVAL(Status__c,&quot;Rejected&quot;),IMAGE( &quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=01534000002GSq8&quot;, &quot;Rejected1&quot;), 
IF(ISPICKVAL(Status__c,&quot;Cancelled&quot;),IMAGE( &quot;https://c.na29.salesforce.com/servlet/servlet.FileDownload?file=0158000000151bq&quot;, &quot;Cancelled&quot;), 
IF(ISPICKVAL(Status__c,&quot;New&quot;),IMAGE( &quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=01534000002GSpe&quot;, &quot;New&quot;), 
IF(ISPICKVAL(Status__c,&quot;Revise and Resubmit&quot;),IMAGE( &quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=015800000014viT&quot;, &quot;Revise and Resubmit1&quot;), 
IF(ISPICKVAL(Status__c,&quot;Approved as Corrected&quot;),IMAGE( &quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=015800000014vhz&quot;, &quot;Approved as Corrected1&quot;), 
IF(ISPICKVAL(Status__c,&quot;Approved&quot;),IMAGE( &quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=015800000014vi4&quot;, &quot;Approved&quot;), 
IF(ISPICKVAL(Status__c,&quot;Re-assigned&quot;),IMAGE( &quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=0154C0000005IRa&quot;, &quot;Re-assigned&quot;), 
&quot;&quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Changes based on the status of the Test Report</inlineHelpText>
        <label>Status Highlight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Used to track and manage the status of the submittal</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Revise and Submit</fullName>
                </value>
                <value>
                    <fullName>Approved as Corrected</fullName>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Test Report</label>
    <nameField>
        <label>Test Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>